fix layout of shows page on mobile
* images are square
* column is full width

--- a/app/assets/stylesheets/shows.scss
+++ b/app/assets/stylesheets/shows.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the shows controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@media only screen and (max-device-width: 600px) {
+	.shows {
+		img.artist.photo {
+			width: 50px;
+			height: 50px;
+		}
+
+		ol.columnheads > li,
+		li.vevent {
+			width: 100%;
+		}
+	}
+
+}
